--- a/src/Remact.Net.Bms1Serializer/Remact.Net.Bms1Serializer.csproj
+++ b/src/Remact.Net.Bms1Serializer/Remact.Net.Bms1Serializer.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -32,13 +32,17 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Internal\InternalReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bms1Reader.cs" />
-    <Compile Include="Bms1Tag.cs" />
+    <Compile Include="Internal\TagReader.cs" />
     <Compile Include="Bms1Writer.cs" />
-    <Compile Include="IBms1Block.cs" />
-    <Compile Include="Bms1Bms1Attributes.cs" />
+    <Compile Include="Internal\Attributes.cs" />
     <Compile Include="Bms1Exception.cs" />
+    <Compile Include="IBms1Dto.cs" />
+    <Compile Include="Bms1Tag.cs" />
+    <Compile Include="IBms1Internal.cs" />
+    <Compile Include="IBms1Reader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
