--- a/src/Remact.Net.Bms1Serializer/Remact.Net.Bms1Serializer.csproj
+++ b/src/Remact.Net.Bms1Serializer/Remact.Net.Bms1Serializer.csproj
@@ -9,6 +9,8 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Remact.Net.Bms1Serializer</RootNamespace>
     <AssemblyName>Remact.Net.Bms1Serializer</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -19,6 +21,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -27,17 +30,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bms1MessageSerializer.cs" />
     <Compile Include="Internal\InternalReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\TagReader.cs" />
     <Compile Include="Bms1Exception.cs" />
     <Compile Include="IBms1Reader.cs" />
-    <Compile Include="Bms1MessageSerializer.cs" />
     <Compile Include="Internal\Bms1Reader.cs" />
     <Compile Include="Internal\Bms1Writer.cs" />
     <Compile Include="IBms1Writer.cs" />
